Remove jvm add-modules option